Gabel West: Haus der Liebe + Sukkubustempel

--- a/mod/area/gabel_west.git.yml
+++ b/mod/area/gabel_west.git.yml
@@ -3358,7 +3358,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 50}
@@ -3993,7 +3993,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -4010,8 +4010,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: xyz}
     KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_HDL_2_gabel_west}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -4037,7 +4037,7 @@ Door List:
     Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Haustrunbreakable}
+    Tag: {type: :cexostr, value: gabel_west_2_gabel_HDL}
     TemplateResRef: {type: :resref, value: door_unbreak}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -5392,7 +5392,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 67}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -6116,7 +6116,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 139}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -7431,7 +7431,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1344}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
