Bordell: fix locstrs

--- a/mod/area/gabel_bordell.git.yml
+++ b/mod/area/gabel_bordell.git.yml
@@ -141,7 +141,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Palada
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -356,7 +356,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Sya
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -580,7 +580,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Tamara
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -795,7 +795,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Elen'karr
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -987,7 +987,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Niriel
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -1211,7 +1211,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Pela
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -1374,7 +1374,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Frau
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -1537,7 +1537,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Frau
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -1691,7 +1691,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Frau
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -1915,7 +1915,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Anna
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -2139,7 +2139,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Lima
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -2363,7 +2363,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Cala
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -2564,7 +2564,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Valima
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -2788,7 +2788,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Baralla
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -3513,7 +3513,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Prostituierte
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
@@ -3728,7 +3728,7 @@ Creature List:
     FirstName: 
       type: :cexolocstr
       value: 
-        0: "B\xFCrgerin"
+        0: Prostituierte
     Gender: {type: :byte, value: 1}
     GoodEvil: {type: :byte, value: 100}
     HitPoints: {type: :short, value: 6}
