ascruins: added "Anauroch" name-prefix, finally got an entrance, fix lighting

--- a/mod/area/ascruins1.are.yml
+++ b/mod/area/ascruins1.are.yml
@@ -12,7 +12,7 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 3}
-FogClipDist: {type: :float, value: 200.0}
+FogClipDist: {type: :float, value: 150.0}
 Height: {type: :int, value: 12}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 1}
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: "Ruine in der W\xFCste - Gro\xDFe Halle"
+    0: "Anauroch - Ruine in der W\xFCste - Gro\xDFe Halle"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
@@ -36,7 +36,7 @@ OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
 PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: ascruins1}
-ShadowOpacity: {type: :byte, value: 60}
+ShadowOpacity: {type: :byte, value: 50}
 SkyBox: {type: :byte, value: 0}
 SunAmbientColor: {type: :dword, value: 0}
 SunDiffuseColor: {type: :dword, value: 0}
