--- a/mod/area/ascruins4.are.yml
+++ b/mod/area/ascruins4.are.yml
@@ -12,7 +12,7 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 3}
-FogClipDist: {type: :float, value: 100.0}
+FogClipDist: {type: :float, value: 150.0}
 Height: {type: :int, value: 12}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 1}
@@ -22,13 +22,13 @@ ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
 MoonAmbientColor: {type: :dword, value: 0}
 MoonDiffuseColor: {type: :dword, value: 0}
-MoonFogAmount: {type: :byte, value: 200}
+MoonFogAmount: {type: :byte, value: 10}
 MoonFogColor: {type: :dword, value: 0}
 MoonShadows: {type: :byte, value: 1}
 Name: 
   type: :cexolocstr
   value: 
-    0: "Ruine in der W\xFCste 3"
+    0: "Anauroch - Ruine in der W\xFCste"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
@@ -36,7 +36,7 @@ OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
 PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: ascruins4}
-ShadowOpacity: {type: :byte, value: 100}
+ShadowOpacity: {type: :byte, value: 50}
 SkyBox: {type: :byte, value: 0}
 SunAmbientColor: {type: :dword, value: 0}
 SunDiffuseColor: {type: :dword, value: 0}
