--- a/mod/area/ascruins5.git.yml
+++ b/mod/area/ascruins5.git.yml
@@ -39,7 +39,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -123,41 +123,41 @@ TriggerList:
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0}
-        PointZ: {type: :float, value: 1.79299998283386}
+        PointZ: {type: :float, value: 1.78302037715912}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/TriggerList/Geometry
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: -1.94309997558594}
-        PointZ: {type: :float, value: 1.79299998283386}
+        PointZ: {type: :float, value: 1.78302037715912}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/TriggerList/Geometry
         __struct_id: 3
         PointX: {type: :float, value: 0.878499984741211}
         PointY: {type: :float, value: -1.95280003547668}
-        PointZ: {type: :float, value: 1.17519998550415}
+        PointZ: {type: :float, value: 1.13570296764374}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/TriggerList/Geometry
         __struct_id: 3
         PointX: {type: :float, value: 0.860000014305115}
         PointY: {type: :float, value: 0.126599997282028}
-        PointZ: {type: :float, value: 1.18879997730255}
+        PointZ: {type: :float, value: 1.14933574199677}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: GIT/TriggerList/Geometry
         __struct_id: 3
         PointX: {type: :float, value: 0.0}
         PointY: {type: :float, value: 0.0582999996840954}
-        PointZ: {type: :float, value: 1.79299998283386}
+        PointZ: {type: :float, value: 1.78302037715912}
     HighlightHeight: {type: :float, value: 0.0}
     KeyName: {type: :cexostr, value: ""}
-    LinkedTo: {type: :cexostr, value: OutdoortoIndoor}
+    LinkedTo: {type: :cexostr, value: OestlSchlu_2_ascruins}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocalizedName: 
       type: :cexolocstr
       str_ref: 14760
-      value: {}
-
+      value: 
+        0: "Neuer Gebiets\xFCbergang"
     OnClick: {type: :resref, value: ""}
     OnDisarm: {type: :resref, value: ""}
     OnTrapTriggered: {type: :resref, value: ""}
@@ -166,7 +166,7 @@ TriggerList:
     ScriptOnEnter: {type: :resref, value: ""}
     ScriptOnExit: {type: :resref, value: ""}
     ScriptUserDefine: {type: :resref, value: ""}
-    Tag: {type: :cexostr, value: IndoortoOutdoor}
+    Tag: {type: :cexostr, value: ascruins_2_OestlSchlu}
     TemplateResRef: {type: :resref, value: newtransition}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -176,9 +176,9 @@ TriggerList:
     TrapType: {type: :byte, value: 0}
     Type: {type: :int, value: 1}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 66.1}
+    XPosition: {type: :float, value: 66.1536}
     YOrientation: {type: :float, value: 0.0}
-    YPosition: {type: :float, value: 105.9035}
+    YPosition: {type: :float, value: 105.9792}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
@@ -773,10 +773,10 @@ WaypointList:
       value: {}
 
     MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: WP_IndoortoOutdoor}
+    Tag: {type: :cexostr, value: WP_ascruins_2_OestlSchlu}
     TemplateResRef: {type: :resref, value: ""}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 66.5392}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 104.9904}
-    ZPosition: {type: :float, value: 1.4841}
+    XOrientation: {type: :float, value: 0.9808}
+    XPosition: {type: :float, value: 67.4071}
+    YOrientation: {type: :float, value: 0.1951}
+    YPosition: {type: :float, value: 105.1862}
+    ZPosition: {type: :float, value: 0.8344}
