--- a/mod/area/ascruins6.are.yml
+++ b/mod/area/ascruins6.are.yml
@@ -12,7 +12,7 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 4}
-FogClipDist: {type: :float, value: 45.0}
+FogClipDist: {type: :float, value: 150.0}
 Height: {type: :int, value: 8}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 0}
@@ -22,13 +22,13 @@ ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
 MoonAmbientColor: {type: :dword, value: 0}
 MoonDiffuseColor: {type: :dword, value: 0}
-MoonFogAmount: {type: :byte, value: 0}
+MoonFogAmount: {type: :byte, value: 10}
 MoonFogColor: {type: :dword, value: 0}
 MoonShadows: {type: :byte, value: 1}
 Name: 
   type: :cexolocstr
   value: 
-    0: "Schlucht in der W\xFCste"
+    0: "Anauroch - Schlucht in der W\xFCste"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_desert}
 OnExit: {type: :resref, value: _area_leave}
