--- a/mod/area/plane_abyss.are.yml
+++ b/mod/area/plane_abyss.are.yml
@@ -11,7 +11,7 @@ Expansion_List:
   type: :list
   value: []
 
-Flags: {type: :dword, value: 0}
+Flags: {type: :dword, value: 1}
 FogClipDist: {type: :float, value: 150.0}
 Height: {type: :int, value: 30}
 ID: {type: :int, value: -1}
@@ -35,7 +35,7 @@ OnExit: {type: :resref, value: _area_leave}
 OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
 PlayerVsPlayer: {type: :byte, value: 3}
-ResRef: {type: :resref, value: area001}
+ResRef: {type: :resref, value: plane_abyss}
 ShadowOpacity: {type: :byte, value: 50}
 SkyBox: {type: :byte, value: 0}
 SunAmbientColor: {type: :dword, value: 128}
