mod.ifo: add wrm fantasy interior, seasonal forest tileset haks

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -66,6 +66,9 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: anthvfxfirework}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: primweapons}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_common}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: wrm_fantasyintf}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: wrm_fantasyint}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: wrm_seasonalv10}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_genericdoors}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_brick_int}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: IFO/Mod_HakList, __struct_id: 8, Mod_Hak: {type: :cexostr, value: ctp_elf_interior}}
