hak Makefiles remove *.hak on clean

--- a/hak/client_2da/Makefile
+++ b/hak/client_2da/Makefile
@@ -45,7 +45,7 @@ clean-backup:
 	-rm *.*~ *.out
 
 clean: clean-backup
-	rm *.2da
+	-rm *.2da *.hak
 	
 $(TARGET): $(twoda)
 	erfpack.pl -H -o $@ $(VALIDEXT)
